<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SelecionarIrregularidadeActivity"
    android:orientation="vertical"
    android:background="?attr/colorSecondary">

    <TextView
        android:id="@+id/tvIrregularidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrar_irregularidade"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/roboto_medium"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/placa_hint"
        app:endIconMode="clear_text"
        app:counterEnabled="true"
        app:counterMaxLength="7"
        android:layout_marginTop="45dp"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_baseline_error_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPlaca"
            android:inputType="textCapCharacters"
            android:maxLength="7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecionar_irregularidade"
        android:textSize="27sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_medium"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vaga_inadequada"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ticket_expirado"
            android:textSize="20sp"/>


    </RadioGroup>

 <!--   <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etIrregularidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Descreva a Irregularidade"/>

    </com.google.android.material.textfield.TextInputLayout> -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnProx"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/proximo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="22sp"
        android:backgroundTint="@color/azultema"/>

</androidx.appcompat.widget.LinearLayoutCompat>