<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorSecondary"
    tools:context=".activities.ConsultarActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_baseline_search_24_2"
        android:tint="?attr/colorPrimaryVariant"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/consultar_placa"
        android:fontFamily="@font/roboto_regular"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="36sp"
        android:textAlignment="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/placa_hint"
        app:endIconMode="clear_text"
        app:counterEnabled="true"
        app:counterMaxLength="7"
        android:layout_marginTop="45dp"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_baseline_error_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPlaca"
            android:inputType="textCapCharacters"
            android:maxLength="7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnConsult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consultar"
        android:fontFamily="@font/roboto_medium"
        android:textSize="20sp"
        android:padding="15dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/azultema"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        app:iconGravity="end"
        app:iconSize="28dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>